# AsteroidsGame

./: Asteroid.cpp  AsteroidsGame.cpp  AsteroidsGame.h  AsteroidsManager.cpp  AsteroidsManager.h  CMakeLists.txt  Collisions.cpp  Collisions.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  GameWindow.cpp  GameWindow.h  InputComponent.cpp  InputComponent.h  InputHandler.cpp  InputHandler.h  Makefile  Map.cpp  Map.h  MoveableUnit.cpp  MoveableUnit.h  README.md  SpaceShip.cpp  SpaceShip.h  Sprite.cpp  Sprite.h  UnitManager.cpp  UnitManager.h  Vector2D.cpp  Vector2D.h  Window.cpp  Window.h  main.cpp
AsteroidManager/: AsteroidsManager.cpp  AsteroidsManager.h
Collisions/: Collisions.cpp  Collisions.h
Game/: Game.cpp  Game.h
GameObject/: Asteroid.h  GameObject.h  SpaceShip.cpp
InputComponent/: InputComponent.cpp  InputComponent.h
Map/: Map.cpp  Map.h
SDL2/include/SDL2/: SDL_gamecontroller.h  SDL_gesture.h  SDL_joystick.h  SDL_loadso.h  SDL_sensor.h  SDL_surface.h
Sprite/: Sprite.cpp  Sprite.h
SpriteManager/: SpriteManager.cpp  SpriteManager.h
src/AbilityAppearance/: AbilityAppearance.cpp  AbilityAppearance.h
src/Collisions/: Collisions.cpp  Collisions.h
src/Game/: Game.cpp  Game.h
src/GameObject/: Asteroid.cpp  Asteroid.h  Button.cpp  Button.h  GameObject.cpp  GameObject.h  GameOverMessage.cpp  GameOverMessage.h  MovableGameObject.cpp  MovableGameObject.h  SpaceShip.cpp  SpaceShip.h
src/GameObject/Ability/AutoShootObject/: AutoShootObject.cpp  AutoShootObject.h
src/GameObject/Ability/MissileObject/: MissileObject.cpp  MissileObject.h
src/GameObject/Ability/ShieldObject/: ShieldObject.cpp  ShieldObject.h
src/GameObject/AbilityIcon/: AbilityIcon.cpp  AbilityIcon.h
src/GameObject/AbilityIcon/AutoShootIcon/: AutoShootIcon.cpp  AutoShootIcon.h
src/GameObject/AbilityIcon/MissileIcon/: MissileIcon.cpp  MissileIcon.h
src/GameObject/AbilityIcon/ShieldIcon/: ShieldIcon.cpp  ShieldIcon.h
src/GameObject/AbilityIcons/AutoShootIcon/: AutoShootIcon.cpp  AutoShootIcon.h
src/GameObject/AbilityIcons/MissileIcon/: MissileIcon.cpp  MissileIcon.h
src/GameObject/AbilityIcons/ShieldIcon/: ShieldIcon.cpp  ShieldIcon.h
src/GameObject/AbilityObjects/AutoShootObject/: AutoShootObject.cpp
src/GameObject/AbilityObjects/MissileObject/: MissileObject.cpp
src/GameObject/AbilityObjects/ShieldObject/: ShieldObject.cpp
src/GameObject/Asteroid/: Asteroid.cpp  Asteroid.h
src/GameObject/Asteroid/BigAsteroid/: BigAsteroid.cpp  BigAsteroid.h
src/GameObject/Asteroid/SmallAsteroid/: SmallAsteroid.cpp  SmallAsteroid.h
src/GameObject/BigAsteroid/: BigAsteroid.cpp  BigAsteroid.h
src/GameObject/Bullet/: Bullet.cpp  Bullet.h
src/GameObject/Button/: Button.cpp  Button.h
src/GameObject/GameOverMessage/: GameOverMessage.cpp  GameOverMessage.h
src/GameObject/Missile/: Missile.cpp  Missile.h
src/GameObject/MovableGameObject/: Asteroid.cpp  MovableGameObject.cpp  MovableGameObject.h  SpaceShip.h
src/GameObject/MovableGameObject/Ability/AutoShootObject/: AutoShootObject.cpp  AutoShootObject.h
src/GameObject/MovableGameObject/BigAsteroid/: BigAsteroid.cpp  BigAsteroid.h
src/GameObject/MovableGameObject/Bullet/: Bullet.cpp  Bullet.h
src/GameObject/MovableGameObject/Reticle/: Reticle.cpp  Reticle.h
src/GameObject/MovableGameObject/SmallAsteroid/: SmallAsteroid.cpp  SmallAsteroid.h
src/GameObject/MovableGameObject/SpaceShip/: SpaceShip.cpp  SpaceShip.h
src/GameObject/Reticle/: Reticle.cpp  Reticle.h
src/GameObject/SmallAsteroid/: SmallAsteroid.cpp  SmallAsteroid.h
src/GameObject/SpaceShip/: SpaceShip.cpp  SpaceShip.h
src/GameParameters/: GameParameters.cpp  GameParameters.h
src/GameStates/: GameOverState.cpp  GameOverState.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h
src/GameStates/GameOverState/: GameOverState.cpp  GameOverState.h
src/GameStates/MenuState/: MenuState.cpp  MenuState.h
src/GameStates/PauseState/: PauseState.cpp  PauseState.h
src/GameStates/PlayState/: PlayState.cpp  PlayState.h
src/GameWindow/: GameWindow.cpp  GameWindow.h
src/InputComponent/: InputComponent.cpp  InputComponent.h
src/InputHandler/: InputHandler.cpp  InputHandler.h
src/Map/: Map.cpp  Map.h
src/MessageString/: MessageString.cpp  MessageString.h
src/ObjectManager/: ObjectManager.cpp  ObjectManager.h
src/RandomGenerator/: RandomGenerator.cpp  RandomGenerator.h
src/ResultMessage/: ResultMessage.cpp  ResultMessage.h
src/Sprite/: Sprite.h
src/SpriteManager/: SpriteManager.h
src/StateMachine/: GameStateMachine.cpp  GameStateMachine.h  StateMachine.cpp  StateMachine.h
src/TextureManager/: TextureManager.cpp  TextureManager.h
src/Vector2D/: Vector2D.cpp  Vector2D.h
(+4 files in other folders)
